@@ -35,6 +35,7 @@ $cfg = {
     , 'localoutpathbase'  => "$ENV{PH_LOCAL}/out/log" 
     , 'localxmlpathbase'  => "$ENV{PH_LOCAL}/out/xml" 
     , 'localpathbase'     => "$ENV{PH_LOCAL}/out/pigtest/$me" 
+    , 'benchmarkcachepath'=> "$ENV{PH_BENCHMARK_CACHE_PATH}"
 
     #TEST
     , 'benchmarkPath'    => "$ENV{PH_OUT}/benchmarks"
